--- a/news/templates/news/news_home.html
+++ b/news/templates/news/news_home.html
@@ -3,7 +3,7 @@
 {% block title %}Новости{% endblock %}
 
 {% block content %}
-    <div class="freatures">
+    <div class="features">
         <h1>Новости на сайте</h1>
         
         {% if news %}
