--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: #2c2c2c;
 }
+
 aside {
     float: left;
     background: #181818;
@@ -25,6 +26,7 @@ aside .logo {
     position: relative;
     top: -115px;
 }
+
 aside h3 {
     font-weight: 400;
     font-size: 20px;
@@ -36,6 +38,7 @@ aside ul {
     margin-left: -35px;
     list-style: none;
 }
+
 aside ul li {
     color: #fff;
     display: block;
@@ -43,22 +46,35 @@ aside ul li {
     transition: transform .6s ease;
 }
 
-aside ul li:hover, aside ul li a:hover {
+aside ul li:hover,
+aside ul li a:hover {
     color: #eb5959;
     text-decoration: none;
     transform: scale(1.07);
 }
 
-main .freatures {
+main .features {
+    display: block;
     float: left;
     color: #fff;
     margin-top: 100px;
     text-align: center;
-    width: 75%;
+    width: 80%;
 }
 
-main .freatures h1 {font-size: 50px;}
-main .freatures p {max-width: 400px; margin: 20px auto;}
+main .features div {
+    width: clamp(200px, 90%, 900px);
+    margin-inline: auto;
+}
+
+main .features h1 {
+    font-size: 50px;
+}
+
+main .features p {
+    max-width: 400px;
+    margin: 20px auto;
+}
 
 /* .alert-warning {
     float: left;
