--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -62,10 +62,10 @@ main .features {
     width: 80%;
 }
 
-main .features div {
+/* main .features div {
     width: clamp(200px, 90%, 900px);
     margin-inline: auto;
-}
+} */
 
 main .features h1 {
     font-size: 50px;
