--- a/news/templates/news/create.html
+++ b/news/templates/news/create.html
@@ -7,11 +7,11 @@
         <h1>Форма по добавлению статьи</h1>
         <form method="post" action="/news/check">
             {% csrf_token %}
-            {{ form.title }}
-            {{ form.anons }}
-            {{ form.full_text }}
-            {{ form.date }}
-
+            {% comment %} {{ form.title }}<br>
+            {{ form.anons }}<br>
+            {{ form.full_text }}<br>
+            {{ form.date }}<br> {% endcomment %}
+            <span>{{ error }}</span>
             <input type="text" placeholder="Название статьи" class="form-control"><br>
             <input type="text" placeholder="Анонс статьи" class="form-control"><br>
             <textarea class="form-control" placeholder="Текст статьи"></textarea><br>
