--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -76,20 +76,20 @@ main .features p {
     margin: 20px auto;
 }
 
-/* .alert-warning {
+.alert-warning {
     float: left;
     clear: both;
     width: 400px;
     margin: 20px 34%;
     text-align: left;
-} */
-
-h1 {
-    font-weight: 700;
 }
 
-/* form {
+h1 {
+    font-weight: 600;
+}
+
+form {
     margin: 32%;
     width: 500px;
     margin-top: 50px;
-} */
+}
